# LGA_SeqChecker

./: .gitignore  CMakeLists.txt  README_APP.md  SeqChecker_installer.iss  compilar_dev.bat  deploy.bat  instalador.bat  sync_version.bat
.cursor/rules/: windows-build.mdc
cmake/: windows_icon.rc.in
config/: debug_flags.txt
docs/: ChangeLog.md
include/mediatools/: AppPathManager.h  PythonRunner.h  debug_flags.h
include/mediatools/utils/: LogRotation.h
include/seqchecker/: ArrowComboBox.h  ShotNameDetector.h  mainwindow.h
include/seqchecker/utils/: TableColumnWidthHelper.h  TableHeaderDividerView.h
py_scr/: LGA_SeqChecker.py
resources/: resources.qrc
resources/styles/: dark_theme.qss  tabs.qss
src/: main.cpp
src/core/: AppPathManager.cpp
src/core/debug/: debug_flags.cpp
src/ui/mainwindow/: mainwindow.cpp
src/utils/: ArrowComboBox.cpp  LogRotation.cpp  PythonRunner.cpp  ShotNameDetector.cpp  TableColumnWidthHelper.cpp
tools/: sync_version.py
